corrected website title

--- a/index.html
+++ b/index.html
@@ -3,24 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ishabbicook</title>
+    <title>Isabbicook</title>
     <!-- Custom CSS-->
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-<!-- Alternative navbar -->
-<!-- End of alternative -->
+
 
 <!-- Navbar -->
     <nav class="navbar">
         <div class="navbar-center">
-        <span class="nav-icon" for="menu-btn"><i class="fa fa-bars"></i></span><!-- Navigation icon for bars -->
-        
-        
+        <!-- Hamburger -->
+        <span class="nav-icon" for="menu-btn"><i class="fa fa-bars"></i></span>
         <!-- Branding -->
-        <h1 class="logo">Ishabbicook</h1>
-
+        <h1 class="logo">IsabbiCook</h1>
         <!-- Cart icon btn -->
          <div class="cart-btn"><!-- Shopping cart button div with empty cart number -->
             <span class="nav-icon"><i class="fa fa-cart-plus"></i><!-- Shopping cart button itself--></span>
